# WBackuper

./: CMakeLists.txt  README.md
cmake/: qtloader.cmake
modules/BackupManager/: CMakeLists.txt  README.md
modules/BackupManager/include/: BackupManager.h  BackupProfile.h  ConfigManager.h  StreamDevice.h
modules/BackupManager/src/: BackupManager.cpp  BackupProfile.cpp  ConfigManager.cpp  StreamDevice.cpp  pch.h
modules/ConsoleApp/: CMakeLists.txt  README.md
modules/ConsoleApp/src/: Main.cpp  pch.h
modules/GuiApp/: CMakeLists.txt
modules/GuiApp/include/: BackupHelper.h  EditProfile.h  InformationTab.h  MainWindow.h  ProfileTab.h  ProfilesFolder.h  QWizardNewProfile.h
modules/GuiApp/src/: BackupHelper.cpp  EditProfile.cpp  InformationTab.cpp  Main.cpp  MainWindow.cpp  ProfileTab.cpp  ProfilesFolder.cpp  QWizardNewProfile.cpp  pch.h
scripts/: clean.cmd  cmakegen-vc14_x64.cmd  cmakegen-vc14_x86.cmd
